fix comment section on mobile

--- a/styles/partials/_responsive.scss
+++ b/styles/partials/_responsive.scss
@@ -270,6 +270,9 @@
         width: 100%;
       }
     }
+    .comment {
+      margin: 0 20px 50px;
+    }
   }
   // CSS Only Hamburger Menu adapted from https://codepen.io/jlnljn/pen/LkXoBb
   .menu {
